Fix tags alignment and exhibit block flow of text with tall item images and short content.

--- a/css/sass/_768max.scss
+++ b/css/sass/_768max.scss
@@ -145,6 +145,23 @@ footer .navigation {
 
 /* @group ----- Exhibits/Show ----- */
 
+.exhibit {
+    clear: both;
+}
+
+.exhibit .description {
+    float: none;
+}
+
+.exhibit .description ~ * {
+    padding: 0;
+    @include box-sizing(border-box);
+}
+
+/* @end */
+
+/* @group ----- Exhibits/Show ----- */
+
 #exhibit-pages {
     width: 100%;
 }
